--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-href="https://www.xvideos.com/">pornowuu</a>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>BokeronTv</title>
+  <meta charset="UTF-8">
+</head>
+<body>
+<img src=https://cdn.discordapp.com/attachments/1033014850022019103/1033560634136211496/unknown.png/>
+</body>
+</html>
