--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<img src=https://cdn.discordapp.com/attachments/1033014850022019103/1033560634136211496/unknown.png/>
+<img src="https://cdn.discordapp.com/attachments/1033014850022019103/1033560634136211496/unknown.png"/>
 </body>
 </html>
